# OpsGuard-AI

./: .gitignore  .opsguardignore  Dockerfile  LICENSE  Makefile  README.md  action.yml  legacy_login.py  opsguard.yml  pyproject.toml
.github/workflows/: opsguard.yml
docs/: whitepaper_structure.md
docs/adr/: 0001-patron-gatekeeper-local.md  0002-prompting-en-ingles.md  0003-telemetria-y-finops.md
prompts/: 01_git_ingest_spec.md  02_create_adrs.md  03_policy_engine_spec.md  04_observability_adr_spec.md  05_ai_integration.md  06_web_dashboard.md
src/: ai.py  console_ui.py  ingest.py  main.py  net_diag.py  security.py
tests/fixtures/vulnerable_app/: auth_middleware.py  aws_creds.env  config.php
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
