[tool.poetry]
name = "opsguard-ai"
version = "0.1.0"
description = "AI-powered DevOps guardian GitHub Action"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# CRÍTICO: Esto asegura que 'src' se instale como un paquete Python real.
# Sin esto, el entrypoint no encuentra el módulo en el CI.
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# FIX: Usamos "all" para asegurar compatibilidad total con Rich y Shell Completion
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.0"
gitpython = "^3.1.40"
openai = "^1.6.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.2.1"
rich = "^14.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"

[tool.poetry.scripts]
# Entrypoint del binario. Apunta a src/main.py -> objeto app
opsguard = "src.main:app"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
# Asegura que pytest encuentre el código fuente sin instalar el paquete
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"